packages/elements/src/react/consent-manager/consent-manager-dialog.css
.consent-manager-dialog-card .consent-manager-widget-branding {
	margin-left: -22px;
	margin-right: -22px;
	width: auto;
}

.consent-manager-dialog-card .card-header {
	position: relative;
}

.consent-manager-dialog-header-close {
	position: absolute;
	right: 22px;
	top: 22px;
}

.consent-manager-dialog-root {
	position: fixed;
	inset: 0px;
	z-index: 999999999;
	display: flex;
	justify-content: center;
	align-items: center;
}

.consent-manager-dialog-container {
	width: full;
	max-width: 28rem /* 448px */;
	margin-left: auto;
	margin-right: auto;
}
.consent-manager-dialog-card .card-footer {
	width: 100%;
	justify-content: center;
	font-size: 14px;
	padding-top: 1rem;
	padding-bottom: 1rem;
	border-top-width: 1px;
	border-top-color: hsl(var(--kf-stroke-soft-200));
}

